# space-pixel-game

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  linux.yml  web.yml  windows.yml
docs/: how_to_run.md
src/: CMakeLists.txt  astronomical_object.cpp  dynamic_body.cpp  game_manager.cpp  main.cpp  minshell.html  physics_object.cpp  player.cpp
src/include/: astronomical_object.h  bullet.h  dynamic_body.h  enemy.h  enums.h  game_manager.h  global.h  input_manager.h  physics_object.h  physics_system.h  planet.h  player.h  star_builder.h
tests/: CMakeLists.txt  game_manager.cpp
